logOutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-dep
  namespace: logping

spec:
  replicas: 1
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      # volumes: # Define volume
      #   - name: shared-file
      #     emptyDir: {}
      containers:
        - name: logoutput
          image: mahk00/logoutput:2.1.7
          # command: [ "/bin/sh", "-c", "env" ]
          volumeMounts:
          - name: foo
            mountPath: "/etc/foo"
            readOnly: true
          # volumeMounts: # Mount volume
          # - name: shared-file
          #   mountPath: /usr/src/app/files
        - name: writerapp
          image: mahk00/writerapp:0.1
          # volumeMounts: # Mount volume
          # - name: shared-file
          #   mountPath: /usr/src/app/files
      volumes:
      - name: foo
        configMap:
          name: env-config
