logOutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: logping
  name: logoutput-service
spec:
  type: ClusterIP
  selector:
    app: images
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
